fix: increase line height for better readability in markdown paragraphs

--- a/insash_website_frontend/src/public/style/markdown.css
+++ b/insash_website_frontend/src/public/style/markdown.css
@@ -57,7 +57,7 @@ markdown li {
 
 markdown p {
   font-family: var(--insash-markdown-default-font), sans-serif;
-  line-height: 1.6;
+  line-height: 1.8;
   /* font-size: 20px; */
   text-align: justify;
 }
